--- a/src/assets/styles/ProjectList.css
+++ b/src/assets/styles/ProjectList.css
@@ -53,7 +53,11 @@
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	justify-content: center;
+	justify-content: flex-start;
+}
+
+.projects-link {
+	text-decoration: none;
 }
 
 @media (max-width: 1000px) {
